--- a/ramdisk/init.41031.rc
+++ b/ramdisk/init.41031.rc
@@ -30,27 +30,26 @@ on boot
 	chown nfc nfc /sys/bus/i2c/devices/0-0028/rd_nfc_sim_status
 	chmod 0444 /sys/bus/i2c/devices/0-0028/rd_nfc_sim_status
 	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_enable_status
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_card_num
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_card_num
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_chip_type
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_chip_type
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_fw_version
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_fw_version
 	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_enable_status
-    chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_single_channel
-    chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_single_channel
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfcservice_lock
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfcservice_lock
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_svdd_sw
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_svdd_sw
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_close_type
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_close_type
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_single_channel
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_single_channel
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/conf_for_factory
+	chmod 0444 /sys/bus/i2c/devices/0-0028/conf_for_factory
 
-	chown system system /dev/fpc1020
-	chmod 0660 /dev/fpc1020
-	chown system system /sys/devices/platform/fingerprint/diag/result
-	chown system system /sys/devices/platform/fingerprint/diag/navigation_enable
-	chown system system /sys/devices/platform/fingerprint/diag/wakeup_enable
-	chown system system /sys/devices/platform/fingerprint/diag/chip_id
-	chown system system /sys/devices/platform/fingerprint/diag/selftest
-	chown system system /sys/devices/platform/fingerprint/diag/fingerdetect
-	chown system system /sys/devices/platform/fingerprint/setup/adc_gain
-	chown system system /sys/devices/platform/fingerprint/setup/adc_shift
-	chown system system /sys/devices/platform/fingerprint/setup/capture_mode
-	chown system system /sys/devices/platform/fingerprint/setup/capture_count
-	chown system system /sys/devices/platform/fingerprint/setup/capture_col_groups
-	chown system system /sys/devices/platform/fingerprint/setup/capture_col_start
-	chown system system /sys/devices/platform/fingerprint/setup/capture_row_count
-	chown system system /sys/devices/platform/fingerprint/setup/capture_row_start
-	chown system system /sys/devices/platform/fingerprint/setup/capture_settings_mux
-	chown system system /sys/devices/platform/fingerprint/setup/pxl_ctrl
-	chown system system /sys/devices/platform/fingerprint/fingerprint_chip_info
-
+    chmod  0660  /dev/fingerprint
+    chown  system  system  /dev/fingerprint
+    chmod  0660  /sys/devices/platform/fingerprint/irq
+    chown  system  system  /sys/devices/platform/fingerprint/irq
+    chown  system system /sys/devices/platform/fingerprint/fingerprint_chip_info
