--- a/ramdisk/init.4843.rc
+++ b/ramdisk/init.4843.rc
@@ -32,7 +32,22 @@ on boot
 	chown nfc nfc /sys/bus/i2c/devices/0-0028/rd_nfc_sim_status
 	chmod 0444 /sys/bus/i2c/devices/0-0028/rd_nfc_sim_status
 	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_enable_status
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_card_num
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_card_num
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_chip_type
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_chip_type
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_fw_version
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_fw_version
 	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_enable_status
-
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfcservice_lock
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfcservice_lock
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_svdd_sw
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_svdd_sw
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_close_type
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_close_type
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_single_channel
+	chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_single_channel
+	chown nfc nfc /sys/bus/i2c/devices/0-0028/conf_for_factory
+	chmod 0444 /sys/bus/i2c/devices/0-0028/conf_for_factory
 
 
