--- a/ramdisk/init.hisi.rc
+++ b/ramdisk/init.hisi.rc
@@ -11,8 +11,14 @@ on early-fs
 on fs
 
 on post-fs
+    chown system system /proc/uid_cputime/show_uid_stat
+    chmod 0440 /proc/uid_cputime/show_uid_stat
+    chown system system /proc/uid_cputime/remove_uid_range
+    chmod 0660 /proc/uid_cputime/remove_uid_range
 
 on post-fs-data
+    mkdir /data/offlinelogs
+    chmod 770 /data/offlinelogs
 
 on early-boot
     chmod 660 /dev/appvcom
@@ -71,8 +77,6 @@ on early-boot
 
     chown system system /proc/getslice
 
-    mkdir /data/offlinelogs
-    chmod 770 /data/offlinelogs
     chown radio radio sys/devices/platform/balong_power/state
 
 on boot
@@ -81,8 +85,12 @@ on boot
 
 
 
-service ril-daemon /system/bin/rild
+service atcserver /system/bin/atc
     class main
+    disabled
+
+service ril-daemon /system/bin/rild
+    class core
     socket rild stream 660 root radio
     socket rild-ims stream 660 root radio
     socket rildm2 stream 660 root radio
@@ -94,7 +102,7 @@ service ril-daemon /system/bin/rild
 
 service ril-daemon1 /system/bin/rild -c 1
     disabled
-    class main
+    class core
     socket rilds2 stream 660 root radio
     socket rild-debug1 stream 660 radio system
     socket rild-balong-test stream 660 radio system
