--- a/ramdisk/init.manufacture.rc
+++ b/ramdisk/init.manufacture.rc
@@ -18,14 +18,15 @@ on fs
 
     mount ext4 /dev/block/platform/hi_mci.0/by-name/cust /cust wait ro nosuid nodev
     mount_doul vfat-ext4 /dev/block/platform/hi_mci.0/by-name/splash2 /splash2 wait rw nosuid nodev uid=1000,gid=1000,fmask=0002,dmask=0002,context=u:object_r:splash2_data_file:s0
-    mount ext4 /dev/block/platform/hi_mci.0/by-name/3rdmodem /3rdmodem noatime nosuid nodev
+    mount ext4 /dev/block/platform/hi_mci.0/by-name/3rdmodem /3rdmodem noatime nosuid nodev context=u:object_r:radio_data_file:s0
     mount ext4 /dev/block/platform/hi_mci.0/by-name/3rdmodemnvm /3rdmodemnvm noatime nosuid nodev context=u:object_r:radio_data_file:s0
     mount ext4 /dev/block/platform/hi_mci.0/by-name/3rdmodemnvmback /3rdmodemnvmbkp noatime nosuid nodev context=u:object_r:radio_data_file:s0
 
-    mkdir /data/log 0755 system log
     mkdir /splash2/log 0775 system log
     symlink /splash2/fac_log /data/log/fac_log
     symlink /splash2 /log
+    chown root system /splash2
+    chmod 0775 /splash2
 
     wait /dev/block/mmcblk0p35
     chown system system /dev/block/mmcblk0p35
@@ -54,15 +55,26 @@ on fs
     restorecon    /sys/class/graphics/fb0/amoled_hbm
     restorecon      /sys/kernel/set_hmp_thresholds/policy
     restorecon      /sys/class/graphics/fb0/lcd_cabc_mode
-    restorecon      /sys/class/leds/torch/flash_thermal_protect
     restorecon      /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_frequencies
     restorecon      /sys/devices/system/cpu/cpu4/cpufreq/scaling_available_frequencies
-    restorecon      /sys/devices/fff20000.ddr_devfreq/devfreq/ddrfreq/min_freq
-    restorecon      /sys/devices/fff20000.ddr_devfreq/devfreq/ddrfreq/max_freq
-    restorecon      /sys/devices/fff20000.ddr_devfreq/devfreq/ddrfreq/available_frequencies
+    restorecon      /sys/devices/ddrfreq/devfreq/ddrfreq/min_freq
+    restorecon      /sys/devices/ddrfreq/devfreq/ddrfreq/max_freq
+    restorecon      /sys/devices/ddrfreq/devfreq/ddrfreq/available_frequencies
+    restorecon    /sys/class/timed_output/vibrator/vibrator_calib
+    restorecon      /sys/class/leds/torch/flash_thermal_protect
+    restorecon      /sys/class/hw_power/charger/charge_data/iin_thermal
+    restorecon      /sys/class/hw_power/charger/charge_data/ichg_thermal
+    restorecon       /sys/devices/amba.12/f7101000.i2c/i2c-1/1-001c/command
+    restorecon       /sys/devices/amba.13/f7101000.i2c/i2c-1/1-001c/command
+    restorecon       /sys/devices/f8000000.hisi_led/leds/blue/brightness
+    restorecon       /sys/devices/f8000000.hisi_led/leds/red/brightness
+    restorecon       /sys/devices/f8000000.hisi_led/leds/green/brightness
+    restorecon       /sys/devices/platform/balong_fb.1/leds/lcd_backlight0/brightness
+    restorecon       /sys/devices/virtual/leds/torch/brightness
 on post-fs
 
 on post-fs-data
+    mkdir /data/log 0755 system log
 
 on early-boot
 
@@ -75,6 +87,7 @@ on boot
 service atcmdserver  /system/bin/atcmdserver
     class main
     disabled
+    seclabel u:r:atcmdserver:s0
 
 service oeminfo_nvm /sbin/oeminfo_nvm_server
     class core
