--- a/ramdisk/init.rc
+++ b/ramdisk/init.rc
@@ -21,22 +21,14 @@ import /init.post-fs-data.rc
 on early-init
     write /proc/1/oom_score_adj -1000
 
-    write /sys/fs/selinux/checkreqprot 0
-
-    setcon u:r:init:s0
-
     restorecon /adb_keys
 
     start ueventd
-
-    mkdir /mnt 0775 root system
 
     setprop persist.service.hdb.enable true
 
 on init
     sysclktz 0
-
-    loglevel 3
 
     symlink /system/etc /etc
     symlink /sys/kernel/debug /d
@@ -60,25 +52,43 @@ on init
     chmod 0660 /sys/fs/cgroup/memory/sw/tasks
 
     mkdir /system
+    mkdir /su 0755 root root # create mount point for SuperSU
     mkdir /data 0771 system system
     mkdir /cache 0770 system cache
     mkdir /config 0500 root root
 
-    mkdir /mnt/shell 0710 shell shell
-    mkdir /mnt/media_rw 0700 media_rw media_rw
-    mkdir /storage 0751 root sdcard_r
+    mkdir /mnt 0755 root system
+    mount tmpfs tmpfs /mnt mode=0755,uid=0,gid=1000
+    restorecon_recursive /mnt
 
     mkdir /mnt/secure 0700 root root
 
     mkdir /mnt/secure/staging 0700 root root
 
-    mkdir /mnt/secure/asec  0700 root root
+    mkdir /mnt/secure/asec 0755 root root
 
-    mkdir /mnt/asec  0700 root system
+    mkdir /mnt/asec 0775 root system
     mount tmpfs tmpfs /mnt/asec mode=0755,gid=1000
 
-    mkdir /mnt/obb 0700 root system
+    mkdir /mnt/obb 0755 root system
     mount tmpfs tmpfs /mnt/obb mode=0755,gid=1000
+
+    mkdir /mnt/media_rw 0750 root media_rw
+    mkdir /mnt/user 0755 root root
+    mkdir /mnt/user/0 0755 root root
+    mkdir /mnt/expand 0771 system system
+
+    mkdir /storage 0755 root root
+    mkdir /mnt/runtime 0700 root root
+    mkdir /mnt/runtime/default 0755 root root
+    mkdir /mnt/runtime/default/self 0755 root root
+    mkdir /mnt/runtime/read 0755 root root
+    mkdir /mnt/runtime/read/self 0755 root root
+    mkdir /mnt/runtime/write 0755 root root
+    mkdir /mnt/runtime/write/self 0755 root root
+
+    symlink /storage/self/primary /sdcard
+    symlink /mnt/user/0/primary /mnt/runtime/default/self/primary
 
     mkdir /dev/memcg 0700 root system
     mount cgroup none /dev/memcg memory
@@ -94,7 +104,7 @@ on init
     write /proc/sys/kernel/kptr_restrict 2
     write /proc/sys/vm/mmap_min_addr 32768
     write /proc/sys/net/ipv4/ping_group_range "0 2147483647"
-    write /proc/sys/net/unix/max_dgram_qlen 300
+    write /proc/sys/net/unix/max_dgram_qlen 10000
     write /proc/sys/kernel/sched_rt_runtime_us 950000
     write /proc/sys/kernel/sched_rt_period_us 1000000
 
@@ -103,30 +113,26 @@ on init
 
     write /proc/sys/net/ipv4/tcp_fwmark_accept 1
 
+    write /proc/sys/net/ipv4/conf/all/accept_redirects 0
+    write /proc/sys/net/ipv6/conf/all/accept_redirects 0
+
     mkdir /dev/cpuctl
-    mount cgroup none /dev/cpuctl cpu,cpuset
+    mount cgroup none /dev/cpuctl cpu,ionice
     chown system system /dev/cpuctl
     chown system system /dev/cpuctl/tasks
     chmod 0666 /dev/cpuctl/tasks
     write /dev/cpuctl/cpu.shares 1024
     write /dev/cpuctl/cpu.rt_runtime_us 800000
     write /dev/cpuctl/cpu.rt_period_us 1000000
-
-    write /dev/cpuctl/cpuset.cpus 0-7
-    write /dev/cpuctl/cpuset.mems 0
-    write /dev/cpuctl/cgroup.clone_children 1
+    write /dev/cpuctl/ionice.prio 16388
 
     mkdir /dev/cpuctl/top_visible
     chown system system /dev/cpuctl/top_visible/tasks
-    chmod 0660 /dev/cpuctl/top_visible/tasks
-    chmod 0220 /dev/cpuctl/top_visible/cgroup.event_control
+    chmod 0666 /dev/cpuctl/top_visible/tasks
     write /dev/cpuctl/top_visible/cpu.shares 10240
     write /dev/cpuctl/top_visible/cpu.rt_runtime_us 900000
     write /dev/cpuctl/top_visible/cpu.rt_period_us 1000000
-
-    write /dev/cpuctl/top_visible/cpuset.cpus 0-7
-    write /dev/cpuctl/top_visible/cpuset.mems 0
-    write /dev/cpuctl/top_visible/cgroup.clone_children 1
+    write /dev/cpuctl/top_visible/ionice.prio 16384
 
     mkdir /dev/cpuctl/bg_non_interactive
     chown system system /dev/cpuctl/bg_non_interactive/tasks
@@ -134,21 +140,26 @@ on init
     write /dev/cpuctl/bg_non_interactive/cpu.shares 52
     write /dev/cpuctl/bg_non_interactive/cpu.rt_runtime_us 700000
     write /dev/cpuctl/bg_non_interactive/cpu.rt_period_us 1000000
+    write /dev/cpuctl/bg_non_interactive/ionice.prio 16391
 
-    write /dev/cpuctl/bg_non_interactive/cpuset.cpus 0-7
-    write /dev/cpuctl/bg_non_interactive/cpuset.mems 0
-    write /dev/cpuctl/bg_non_interactive/cgroup.clone_children 1
+    mkdir /dev/cpuset
+    mount cpuset none /dev/cpuset
+    mkdir /dev/cpuset/foreground
+    mkdir /dev/cpuset/background
+    write /dev/cpuset/foreground/cpus 0
+    write /dev/cpuset/background/cpus 0
+    write /dev/cpuset/foreground/mems 0
+    write /dev/cpuset/background/mems 0
+    chown system system /dev/cpuset
+    chown system system /dev/cpuset/foreground
+    chown system system /dev/cpuset/background
+    chown system system /dev/cpuset/tasks
+    chown system system /dev/cpuset/foreground/tasks
+    chown system system /dev/cpuset/background/tasks
+    chmod 0664 /dev/cpuset/foreground/tasks
+    chmod 0664 /dev/cpuset/background/tasks
+    chmod 0664 /dev/cpuset/tasks
 
-    mkdir /dev/cpuctl/tg_foreground
-    chown system system /dev/cpuctl/tg_foreground/tasks
-    chmod 0666 /dev/cpuctl/tg_foreground/tasks
-    write /dev/cpuctl/tg_foreground/cpu.shares 1024
-    write /dev/cpuctl/tg_foreground/cpu.rt_runtime_us 800000
-    write /dev/cpuctl/tg_foreground/cpu.rt_period_us 1000000
-
-    write /dev/cpuctl/tg_foreground/cpuset.cpus 0-7
-    write /dev/cpuctl/tg_foreground/cpuset.mems 0
-    write /dev/cpuctl/tg_foreground/cgroup.clone_children 1
 
     chown root net_bw_acct /proc/net/xt_qtaguid/ctrl
     chown root net_bw_stats /proc/net/xt_qtaguid/stats
@@ -160,6 +171,10 @@ on init
     mount pstore pstore /sys/fs/pstore
     chown system log /sys/fs/pstore/console-ramoops
     chmod 0440 /sys/fs/pstore/console-ramoops
+    chown system log /sys/fs/pstore/pmsg-ramoops-0
+    chmod 0440 /sys/fs/pstore/pmsg-ramoops-0
+
+    write /proc/sys/abi/swp 1
 
 on property:sys.boot_from_charger_mode=1
     class_stop charger
@@ -167,6 +182,8 @@ on property:sys.boot_from_charger_mode=1
 
 on load_all_props_action
     load_all_props
+    start logd
+    start logd-reinit
 on cust_parse_action
     cust_parse
 on firmware_mounts_complete
@@ -175,11 +192,11 @@ on firmware_mounts_complete
 on late-init
     trigger early-fs
     trigger fs
+    trigger cust_parse_action
     trigger post-fs
     trigger post-fs-data
 
     trigger load_all_props_action
-    trigger cust_parse_action
     trigger firmware_mounts_complete
 
     trigger early-boot
@@ -187,17 +204,16 @@ on late-init
 
 
 on post-fs
+    start logd
     mount rootfs rootfs / ro remount
     mount rootfs rootfs / shared rec
+    mount none /mnt/runtime/default /storage slave bind rec
 
     chown system cache /cache
     chmod 0770 /cache
     restorecon_recursive /cache
 
-    mkdir /cache/recovery
-    chown system cache /cache/recovery
-    chmod 0770 /cache/recovery
-    restorecon /cache/recovery
+    mkdir /cache/recovery 0770 system cache
 
     chown root log /proc/vmallocinfo
     chmod 0440 /proc/vmallocinfo
@@ -221,6 +237,15 @@ on post-fs-data
     chmod 0771 /data
     restorecon /data
 
+    mkdir /data/media 0770 media_rw media_rw
+
+    start logd
+    start vold
+    installkey /data
+
+    mkdir /data/bootchart 0755 shell shell
+    bootchart_init
+
     copy /data/system/entropy.dat /dev/urandom
 
     mkdir /data/dontpanic 0750 system log
@@ -241,9 +266,12 @@ on post-fs-data
 
     mkdir /data/misc 01771 system misc
     mkdir /data/misc/adb 02750 system shell
-    mkdir /data/misc/bluedroid 0770 bluetooth net_bt_stack
+    mkdir /data/misc/bluedroid 02770 bluetooth net_bt_stack
+    chmod 0660 /data/misc/bluedroid/bt_config.conf
+    chown bluetooth net_bt_stack /data/misc/bluedroid/bt_config.conf
     mkdir /data/misc/bluetooth 0770 system system
     mkdir /data/misc/keystore 0700 keystore keystore
+    mkdir /data/misc/gatekeeper 0700 system system
     mkdir /data/misc/keychain 0771 system system
     mkdir /data/misc/net 0750 root shell
     mkdir /data/misc/radio 0770 system radio
@@ -258,9 +286,11 @@ on post-fs-data
     mkdir /data/misc/ethernet 0770 system system
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     mkdir /data/misc/user 0771 root root
+    mkdir /data/misc/perfprofd 0775 root root
     chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     mkdir /data/local 0751 root root
     mkdir /data/misc/media 0700 media media
+    mkdir /data/misc/vold 0700 root root
 
     mkdir /data/local/tmp 0771 shell shell
     mkdir /data/data 0771 system system
@@ -269,6 +299,7 @@ on post-fs-data
     mkdir /data/app-lib 0771 system system
     mkdir /data/app 0771 system system
     mkdir /data/property 0700 root root
+    mkdir /data/tombstones 0771 system system
 
     mkdir /data/dalvik-cache 0771 root root
     mkdir /data/dalvik-cache/profiles 0711 system system
@@ -280,10 +311,10 @@ on post-fs-data
     mkdir /data/lost+found 0770 root root
 
     mkdir /data/drm 0770 drm drm
+
     mkdir /data/drm/rights 0770 drm drm
     mkdir /data/drm/widevine 0770 drm drm
 
-    mkdir /data/midi 0770 media audio
     mkdir /data/mediadrm 0770 mediadrm mediadrm
 
     mkdir /data/adb 0700 root root
@@ -292,10 +323,19 @@ on post-fs-data
 
     mkdir /data/security 0711 system system
 
+    mkdir /data/backup 0700 system system
+    mkdir /data/media 0770 media_rw media_rw
+    mkdir /data/ss 0700 system system
+    mkdir /data/system 0775 system system
+    mkdir /data/system/heapdump 0700 system system
+    mkdir /data/user 0711 system system
+
     setprop selinux.reload_policy 1
 
     restorecon_recursive /data
     restorecon_files_under_dir /data/system
+
+    exec - system system -- /system/bin/tzdatacheck /system/usr/share/zoneinfo /data/misc/zoneinfo
 
 
 on boot
@@ -308,9 +348,9 @@ on boot
     write /proc/sys/vm/overcommit_memory 1
     write /proc/sys/vm/min_free_order_shift 4
     chown root system /sys/module/lowmemorykiller/parameters/adj
-    chmod 0220 /sys/module/lowmemorykiller/parameters/adj
+    chmod 0664 /sys/module/lowmemorykiller/parameters/adj
     chown root system /sys/module/lowmemorykiller/parameters/minfree
-    chmod 0220 /sys/module/lowmemorykiller/parameters/minfree
+    chmod 0664 /sys/module/lowmemorykiller/parameters/minfree
 
     write /proc/sys/vm/dirty_expire_centisecs 200
     write /proc/sys/vm/dirty_background_ratio  5
@@ -350,11 +390,8 @@ on boot
     chown system system /sys/kernel/ipv4/tcp_rmem_max
     chown root radio /proc/cmdline
 
-
-    mkdir /dev/immersion 0771 system system
-    export VIBE_PIPE_PATH /dev/immersion
-	
     setprop ro.config.compatibility_enable 1
+
     setprop net.tcp.default_init_rwnd 60
 
     class_start core
@@ -366,9 +403,9 @@ on property:hifi.watchdog.come=true
     restart media
     setprop hifi.watchdog.come false
 
-on nonencrypted
-    class_start late_start
 
+on property:vold.decrypt=trigger_default_encryption
+    start defaultcrypto
 
 on property:vold.decrypt=trigger_encryption
     start surfaceflinger
@@ -378,20 +415,31 @@ on property:sys.init_log_level=*
     loglevel ${sys.init_log_level}
 
 on charger
-    mount_doul vfat-ext4 /dev/block/platform/hi_mci.0/by-name/splash2 /splash2 wait rw nosuid nodev context=u:object_r:splash2_data_file:s0
+    mount ext4 /dev/block/platform/hi_mci.0/by-name/splash2 /splash2 wait rw nosuid nodev
     mount ext4 /dev/block/platform/hi_mci.0/by-name/system /system ro
-    mount ext4 /dev/block/platform/hi_mci.0/by-name/userdata /data nosuid nodev noatime wait crypt discard,noauto_da_alloc,mblk_io_submit,data=ordered
+    mount_all /fstab.${ro.hardware}
     class_start charger
+    chown system system /sys/class/android_usb/android0/switch_request
+    chmod 0664 /sys/class/android_usb/android0/switch_request
     start hw_ueventd
 
+on property:vold.decrypt=trigger_reset_main
+    class_reset main
 
 on property:vold.decrypt=trigger_load_persist_props
     load_persist_props
+    start logd
+    start logd-reinit
 
 on property:vold.decrypt=trigger_post_fs_data
     trigger post-fs-data
 
+on property:vold.decrypt=trigger_restart_min_framework
+    class_start main
 
+on property:vold.decrypt=trigger_restart_framework
+    class_start main
+    class_start late_start
 
 on property:vold.decrypt=trigger_shutdown_framework
     class_reset late_start
@@ -406,6 +454,7 @@ on property:sys.sysctl.extra_free_kbytes=*
 on property:sys.sysctl.tcp_def_init_rwnd=*
     write /proc/sys/net/ipv4/tcp_default_init_rwnd ${sys.sysctl.tcp_def_init_rwnd}
 
+
 service ueventd /sbin/ueventd
     class core
     critical
@@ -416,26 +465,22 @@ service logd /system/bin/logd
     socket logd stream 0666 logd logd
     socket logdr seqpacket 0666 logd logd
     socket logdw dgram 0222 logd logd
-    seclabel u:r:logd:s0
+    group root system
 
-service powerlogd /system/bin/powerlogd
-    class core
-    socket powerlogd stream 0600 system system
-    socket powerlogdr seqpacket 0600 system system
-    socket powerlogdw dgram 0220 system system
-
-service hwpged /system/bin/hwpged
-    class main
-    socket MsgHubSock stream 0660 root system
-    user root
+service logd-reinit /system/bin/logd --reinit
+    oneshot
+    disabled
 
 service healthd /sbin/healthd
     class core
     critical
     seclabel u:r:healthd:s0
+    group root system
 
-service charger /sbin/healthd -h
+service charger /sbin/healthd -p
     class charger
+    critical
+    seclabel u:r:healthd:s0
 
 service console /system/bin/sh
     class core
@@ -457,9 +502,10 @@ service adbd /sbin/adbd --root_seclabel=u:r:su:s0
 on property:ro.kernel.qemu=1
     start adbd
 
-service usbshell /system/bin/usbshell
+service usbshell /sbin/usbshell --root_seclabel=u:r:su:s0
     class core
     disabled
+    seclabel u:r:usbshell:s0
 
 service lmkd /system/bin/lmkd
     class core
@@ -476,10 +522,14 @@ service servicemanager /system/bin/servicemanager
     onrestart restart media
     onrestart restart surfaceflinger
     onrestart restart drm
+    onrestart restart perfhub
 
-service vold /system/bin/vold
+service vold /system/bin/vold \
+        --blkid_context=u:r:blkid:s0 --blkid_untrusted_context=u:r:blkid_untrusted:s0 \
+        --fsck_context=u:r:fsck:s0 --fsck_untrusted_context=u:r:fsck_untrusted:s0
     class core
     socket vold stream 0660 root mount
+    socket cryptd stream 0660 root mount
     ioprio be 2
 
 service netd /system/bin/netd
@@ -499,6 +549,7 @@ service dumptool /system/bin/dumptool
     class main
     oneshot
     seclabel u:r:logserver:s0
+
 service hdmi-daemon /system/bin/hdmi_daemon
     class main
     group system
@@ -511,24 +562,20 @@ service surfaceflinger /system/bin/surfaceflinger
     group graphics drmrpc
     onrestart restart zygote
 
-service systeminfo /system/bin/systeminfo
-    class main
-    user root
-    oneshot
-
 service drm /system/bin/drmserver
     class main
     user drm
-    group drm system inet drmrpc sdcard_r media_rw shell
+    group drm system inet drmrpc media_rw sdcard_rw
 
 service filebackup /system/bin/filebackup
     class main
     socket filebackup stream 0660 radio system
+    disabled
 
 service media /system/bin/mediaserver
     class main
     user media
-    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm system dsm shell sdcard_rw sdcard_r
+    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm system dsm
     ioprio rt 4
 
 service defaultcrypto /system/bin/vdc --wait cryptfs mountdefaultencrypted
@@ -538,13 +585,15 @@ service defaultcrypto /system/bin/vdc --wait cryptfs mountdefaultencrypted
 service encrypt /system/bin/vdc --wait cryptfs enablecrypto inplace default
     disabled
     oneshot
-
 service bootanim /system/bin/bootanimation
     class core
     user graphics
-    group graphics audio
+    group system graphics audio
     disabled
     oneshot
+service gatekeeperd /system/bin/gatekeeperd /data/misc/gatekeeper
+    class late_start
+    user system
 
 service installd /system/bin/installd
     class main
@@ -552,7 +601,6 @@ service installd /system/bin/installd
 
 service flash_recovery /system/bin/install-recovery.sh
     class main
-    seclabel u:r:install_recovery:s0
     oneshot
 
 service racoon /system/bin/racoon
@@ -589,17 +637,54 @@ service mdnsd /system/bin/mdnsd
     disabled
     oneshot
 
-service pre-recovery /system/bin/uncrypt
+service uncrypt /system/bin/uncrypt
     class main
     disabled
     oneshot
 
-service drop_caches /system/bin/sh -c "echo 3 > /proc/sys/vm/drop_caches"
+service pre-recovery /system/bin/uncrypt --reboot
     class main
     disabled
     oneshot
+
+service perfprofd /system/xbin/perfprofd
+    class late_start
+    user root
+    oneshot
+
+on property:persist.logd.logpersistd=logcatd
+    mkdir /data/misc/logd 0700 logd log
+    exec - logd log -- /system/bin/logcat -L -b all -v threadtime -v usec -v printable -D -f /data/misc/logd/logcat -r 64 -n 256
+    start logcatd
+
+service logcatd /system/bin/logcat -b all -v threadtime -v usec -v printable -D -f /data/misc/logd/logcat -r 64 -n 256
+    class late_start
+    disabled
+    user logd
+    group log
+
 
 service immvibed /system/bin/immvibed -p 99 -u 1000
     class main
-    user root
+	user root
     group root
+    ioprio rt 4
+
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
+    group input
+
+# mount /data/su.img to /su
+on property:sukernel.mount=1
+    mount ext4 loop@/data/su.img /su noatime
+
+# launch SuperSU daemon
+service daemonsu /sbin/launch_daemonsu.sh
+    class late_start
+    user root
+    seclabel u:r:init:s0
+    oneshot
+
+# SuperSU:PATCH:264
+# SuperSU:STOCK:92cca5c02653b5211899a2f968dbe1f5afd7045c
