--- a/ramdisk/ueventd.rc
+++ b/ramdisk/ueventd.rc
@@ -11,18 +11,20 @@ subsystem adf
 /dev/hw_random            0440   root       system
 /dev/ashmem               0666   root       root
 /dev/binder               0666   root       root
-/dev/pn544                0660   nfc       nfc
+/dev/pn544                0660   nfc        nfc
 
-/dev/log/*                0666   root       log
+/dev/dsm                  0660   system     dsm
+
+/dev/hwlog_exception      0666   root       log
+/dev/pmsg0                0222   root       log
 /dev/log/main             0662   root       log
 /dev/log/radio            0662   root       log
 /dev/log/system           0662   root       log
+/dev/log/events           0662   root       log
 
 /dev/msm_hw3dc            0666   root       root
 
 /dev/kgsl                 0666   root       root
-
-/dev/tspdrv               0660   system       system
 
 /dev/dri/*                0666   root       graphics
 
@@ -93,3 +95,5 @@ subsystem adf
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_max_freq   0664  system system
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_min_freq   0664  system system
+
+/dev/dvb*                 0660   root       system
