Some clean for recovery

--- a/recovery/root/init.recovery.hi3630.rc
+++ b/recovery/root/init.recovery.hi3630.rc
@@ -1,3 +1,9 @@
+# ///////////////////////////////////////////
+# / This .rc  is provided and not generated /
+# ///////////////////////////////////////////
+# /                               gabry3795 /
+# ///////////////////////////////////////////
+
 on init
     write /sys/module/block2mtd/parameters/block2mtd /dev/block/mmcblk0p6
     wait /dev/nve0
