--- a/root/init.rc
+++ b/root/init.rc
@@ -1,3 +1,8 @@
+# ///////////////////////////////////////////
+# /   This init.rc for boot is from stock   /
+# ///////////////////////////////////////////
+# /                               gabry3795 /
+# ///////////////////////////////////////////
 
 import /init.environ.rc
 import /init.usb.rc
