--- a/root/init.manufacture.rc
+++ b/root/init.manufacture.rc
@@ -1,6 +1,4 @@
 on early-init
-test
-
 
 on init
     mkdir /cust
@@ -15,7 +13,6 @@ on early-fs
     start oeminfo_nvm
 
 on fs
-
     mount ext4 /dev/block/platform/hi_mci.0/by-name/cust /cust wait ro nosuid nodev
     mount_doul vfat-ext4 /dev/block/platform/hi_mci.0/by-name/splash2 /splash2 wait rw nosuid nodev uid=1000,gid=1000,fmask=0002,dmask=0002,context=u:object_r:splash2_data_file:s0
     mount ext4 /dev/block/platform/hi_mci.0/by-name/3rdmodem /3rdmodem noatime nosuid nodev context=u:object_r:radio_data_file:s0
@@ -36,41 +33,41 @@ on fs
     chown system system /dev/block/mmcblk0p36
     chmod 0660 /dev/block/mmcblk0p36
 
-    restorecon       /sys/class/leds/red/brightness
-    restorecon       /sys/class/leds/green/brightness
-    restorecon       /sys/class/leds/blue/brightness
-    restorecon      /sys/class/leds/torch_front/brightness
-    restorecon      /sys/class/leds/torch/brightness
-    restorecon      /sys/class/hw_power/charger/charge_data/enable_charger
-    restorecon     /sys/class/leds/lcd_backlight0/brightness
-    restorecon     /sys/class/graphics/fb0/lcd_test_config
-    restorecon     /sys/class/graphics/fb0/amoled_pcd_errflag_check
-    restorecon     /sys/class/ina231/ina231_0/ina231_debug
-    restorecon     /sys/class/ina231/ina231_0/ina231_set
-    restorecon     /sys/class/ina231/ina231_0/ina231_value
-    restorecon     /sys/class/ina231/ina231_1/ina231_debug
-    restorecon    /sys/class/ina231/ina231_1/ina231_set
-    restorecon    /sys/class/ina231/ina231_1/ina231_value
-    restorecon    /sys/class/graphics/fb0/amoled_acl
-    restorecon    /sys/class/graphics/fb0/amoled_hbm
-    restorecon      /sys/kernel/set_hmp_thresholds/policy
-    restorecon      /sys/class/graphics/fb0/lcd_cabc_mode
-    restorecon      /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_frequencies
-    restorecon      /sys/devices/system/cpu/cpu4/cpufreq/scaling_available_frequencies
-    restorecon      /sys/devices/ddrfreq/devfreq/ddrfreq/min_freq
-    restorecon      /sys/devices/ddrfreq/devfreq/ddrfreq/max_freq
-    restorecon      /sys/devices/ddrfreq/devfreq/ddrfreq/available_frequencies
-    restorecon    /sys/class/timed_output/vibrator/vibrator_calib
-    restorecon      /sys/class/leds/torch/flash_thermal_protect
-    restorecon      /sys/class/hw_power/charger/charge_data/iin_thermal
-    restorecon      /sys/class/hw_power/charger/charge_data/ichg_thermal
-    restorecon       /sys/devices/amba.12/f7101000.i2c/i2c-1/1-001c/command
-    restorecon       /sys/devices/amba.13/f7101000.i2c/i2c-1/1-001c/command
-    restorecon       /sys/devices/f8000000.hisi_led/leds/blue/brightness
-    restorecon       /sys/devices/f8000000.hisi_led/leds/red/brightness
-    restorecon       /sys/devices/f8000000.hisi_led/leds/green/brightness
-    restorecon       /sys/devices/platform/balong_fb.1/leds/lcd_backlight0/brightness
-    restorecon       /sys/devices/virtual/leds/torch/brightness
+    restorecon  /sys/class/leds/red/brightness
+    restorecon  /sys/class/leds/green/brightness
+    restorecon  /sys/class/leds/blue/brightness
+    restorecon  /sys/class/leds/torch_front/brightness
+    restorecon  /sys/class/leds/torch/brightness
+    restorecon  /sys/class/hw_power/charger/charge_data/enable_charger
+    restorecon  /sys/class/leds/lcd_backlight0/brightness
+    restorecon  /sys/class/graphics/fb0/lcd_test_config
+    restorecon  /sys/class/graphics/fb0/amoled_pcd_errflag_check
+    restorecon  /sys/class/ina231/ina231_0/ina231_debug
+    restorecon  /sys/class/ina231/ina231_0/ina231_set
+    restorecon  /sys/class/ina231/ina231_0/ina231_value
+    restorecon  /sys/class/ina231/ina231_1/ina231_debug
+    restorecon  /sys/class/ina231/ina231_1/ina231_set
+    restorecon  /sys/class/ina231/ina231_1/ina231_value
+    restorecon  /sys/class/graphics/fb0/amoled_acl
+    restorecon  /sys/class/graphics/fb0/amoled_hbm
+    restorecon  /sys/kernel/set_hmp_thresholds/policy
+    restorecon  /sys/class/graphics/fb0/lcd_cabc_mode
+    restorecon  /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_frequencies
+    restorecon  /sys/devices/system/cpu/cpu4/cpufreq/scaling_available_frequencies
+    restorecon  /sys/devices/ddrfreq/devfreq/ddrfreq/min_freq
+    restorecon  /sys/devices/ddrfreq/devfreq/ddrfreq/max_freq
+    restorecon  /sys/devices/ddrfreq/devfreq/ddrfreq/available_frequencies
+    restorecon  /sys/class/timed_output/vibrator/vibrator_calib
+    restorecon  /sys/class/leds/torch/flash_thermal_protect
+    restorecon  /sys/class/hw_power/charger/charge_data/iin_thermal
+    restorecon  /sys/class/hw_power/charger/charge_data/ichg_thermal
+    restorecon  /sys/devices/amba.12/f7101000.i2c/i2c-1/1-001c/command
+    restorecon  /sys/devices/amba.13/f7101000.i2c/i2c-1/1-001c/command
+    restorecon  /sys/devices/f8000000.hisi_led/leds/blue/brightness
+    restorecon  /sys/devices/f8000000.hisi_led/leds/red/brightness
+    restorecon  /sys/devices/f8000000.hisi_led/leds/green/brightness
+    restorecon  /sys/devices/platform/balong_fb.1/leds/lcd_backlight0/brightness
+    restorecon  /sys/devices/virtual/leds/torch/brightness
 on post-fs
 
 on post-fs-data
@@ -81,9 +78,6 @@ on early-boot
 on boot
 
 
-
-
-
 service atcmdserver  /system/bin/atcmdserver
     class main
     disabled
@@ -91,9 +85,9 @@ service atcmdserver  /system/bin/atcmdserver
 
 service oeminfo_nvm /sbin/oeminfo_nvm_server
     class core
-    critical 
+    critical
     ioprio rt 4
-    seclabel u:r:oeminfo_nvm:s0
+    #seclabel u:r:oeminfo_nvm:s0
 
 service diagserver /system/bin/diagserver
     class main
@@ -103,17 +97,8 @@ service goldeneye /system/bin/goldeneye
     class main
     user root
 
-service check_root /sbin/check_root
-    class main
-    oneshot
-    seclabel u:r:check_root:s0
-
-service check_longpress /system/bin/check_longpress
-    class main
-    oneshot
-
 on property:sys.boot_completed=1
-    start check_root
+    #start check_root
 
 on property:ro.runmode=factory
     chmod 0775 /data/media/0/Music
@@ -122,14 +107,30 @@ on property:ro.runmode=factory
     chown media_rw media_rw /data/media/0/Music
     chown media_rw media_rw /data/media/0/Pictures
 
+##
 service hwnffserver  /system/bin/hwnffserver
     class main
+    disabled
     socket hwnff stream 0660 root mount
+##
 
 service data_cleanner /system/bin/data_cleaner
     class core
+    disabled
     oneshot
 
 service check_hota /system/bin/sh /system/etc/check_hota.sh
     class core
+    disabled
     oneshot
+    
+service check_longpress /system/bin/check_longpress
+    class main
+    disabled
+    oneshot
+
+service check_root /sbin/check_root
+    class main
+    disabled
+    oneshot
+    seclabel u:r:check_root:s0
