--- a/root/init.platform.rc
+++ b/root/init.platform.rc
@@ -141,10 +141,10 @@ on nonencrypted
     trigger data_ready
 
 on verify_cust_oeminfo_action
-    verify_cust_oeminfo
+    #verify_cust_oeminfo
 
 on data_ready
-    verify_cust_oeminfo
+    #verify_cust_oeminfo
     setprop sys.userdata_is_ready 1
     write /proc/post-fs-data 1
     write /proc/apanic_console 1
