--- a/root/init.hisi.rc
+++ b/root/init.hisi.rc
@@ -1,14 +1,9 @@
-on early-init
 
 on init
     write /sys/module/block2mtd/parameters/block2mtd /dev/block/mmcblk0p7
     wait /dev/nve0
     chmod 0770 /dev/nve0
     chown root system /dev/nve0
-
-on early-fs
-
-on fs
 
 on post-fs
     chown system system /proc/uid_cputime/show_uid_stat
@@ -91,6 +86,7 @@ service atcserver /system/bin/atc
 
 service ril-daemon /system/bin/rild
     class core
+    disabled
     socket rild stream 660 root radio
     socket rild-ims stream 660 root radio
     socket rildm2 stream 660 root radio
@@ -98,7 +94,15 @@ service ril-daemon /system/bin/rild
     socket rild-debug stream 660 radio system
     socket rild-debug1 stream 660 radio system
     user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log system dsm irda
+    group radio cache inet misc audio sdcard_rw log
+#   group radio cache inet misc audio sdcard_r sdcard_rw log system dsm irda
+
+#service ril-daemon /system/bin/rild -l /system/lib/libreference-ril.so -- -d /dev/ttyUSB2
+#    class main
+#    socket rild stream 660 root radio
+#    socket rild-debug stream 660 radio system
+#    user root
+#    group radio cache inet misc audio sdcard_rw log
 
 service ril-daemon1 /system/bin/rild -c 1
     disabled
