--- a/root/init.usb.rc
+++ b/root/init.usb.rc
@@ -486,4 +486,4 @@ service hdbd /sbin/hdbd --root_seclabel=u:r:su:s0
 
 service hw_ueventd /sbin/hw_ueventd
     class main
-	seclabel u:r:hw_ueventd:s0
+    #seclabel u:r:hw_ueventd:s0
